--- a/scss/Layout/_navbar.scss
+++ b/scss/Layout/_navbar.scss
@@ -44,6 +44,7 @@
         font-size: 15px;
         font-family: "Aclonica", sans-serif;
         font-weight: 500;
+        cursor: pointer;
         color: #fff;
         text-transform: capitalize;
         background-size: 200% auto;
