--- a/scss/Pages/_home.scss
+++ b/scss/Pages/_home.scss
@@ -44,6 +44,7 @@ body {
           rgba(198, 1, 154, 1) 51%,
           rgba(255, 0, 0, 1) 100%
         );
+        cursor: pointer;
         padding: 10px;
         font-size: 15px;
         font-family: "Aclonica", sans-serif;
@@ -116,6 +117,7 @@ body {
       button:nth-child(3) {
         width: 36%;
         height: 61px;
+        cursor: pointer;
         background: rgb(255, 0, 0);
         background: linear-gradient(
           90deg,
@@ -128,6 +130,7 @@ body {
         font-family: "Aclonica", sans-serif;
         font-weight: 500;
         color: #fff;
+  
         text-transform: capitalize;
         background-size: 200% auto;
         border: 1px solid transparent;
@@ -147,7 +150,7 @@ body {
           rgba(198, 1, 154, 1) 51%,
           rgba(255, 0, 0, 1) 100%
         );
-
+cursor: pointer;
         font-size: 15px;
         font-family: "Aclonica", sans-serif;
         font-weight: 500;
@@ -215,6 +218,7 @@ body {
           rgba(255, 0, 0, 1) 100%
         );
         padding: 10px;
+        cursor: pointer;
         font-size: 15px;
         font-family: "Aclonica", sans-serif;
         font-weight: 500;
@@ -565,34 +569,32 @@ body {
     }
   }
 }
-.gallery{
+.gallery {
   padding: 140px 0px;
-  .container{
-    .gallery-title{
+  .container {
+    .gallery-title {
       display: flex;
       justify-content: center;
       align-items: center;
-      h5{
+      h5 {
         font-size: 45px;
-    color: #fff;
-    font-family: "Aclonica", sans-serif;
-    line-height: 50px;
-    font-weight: 500;
-    // position: relative;
-    margin-bottom: 28px;
+        color: #fff;
+        font-family: "Aclonica", sans-serif;
+        line-height: 50px;
+        font-weight: 500;
+        // position: relative;
+        margin-bottom: 28px;
       }
     }
-    .gallery-items{
+    .gallery-items {
       background-color: #000;
       padding: 6px;
       display: grid;
-      grid-template-columns: repeat(4,1fr);
+      grid-template-columns: repeat(4, 1fr);
       grid-template-rows: repeat(12, 2.4vw);
       gap: 12px;
 
-
       .gallery-img {
-        
         &:nth-child(1) {
           grid-column: 1/2;
           grid-row: 1/6;
@@ -619,17 +621,17 @@ body {
         }
         &:nth-child(7) {
           grid-column: 2/4;
-         grid-row: 7/-1;
+          grid-row: 7/-1;
         }
 
         img {
-          width:100%;
-          height:100%;
+          width: 100%;
+          height: 100%;
           object-fit: cover;
         }
       }
 
-      @media screen and (max-width:600px) {
+      @media screen and (max-width: 600px) {
         grid-template-columns: 1fr;
         grid-template-rows: auto;
 
@@ -644,6 +646,168 @@ body {
           &:nth-child(7) {
             grid-column: 1/-1;
             grid-row: auto;
+          }
+        }
+      }
+    }
+  }
+}
+.upcoming {
+  background-image: url(../../images/event_bg.png);
+  background-size: 90%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 800px;
+  background-position: center bottom;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .container {
+    .upcoming-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 30px;
+      width: 100%;
+      height: 100%;
+      .upcoming-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        h3 {
+          font-family: "Aclonica", sans-serif;
+          font-size: 30px;
+          font-weight: 600;
+          color: #fff;
+        }
+      }
+      .upcoming-timer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        justify-content: space-between;
+        gap: 50px;
+        span {
+          font-size: 20px;
+        }
+        .days {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 15px;
+          font-size: 50px;
+          color: #fff;
+          font-family: "Aclonica", sans-serif;
+        }
+        .hours {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 15px;
+          font-size: 50px;
+          color: #fff;
+          font-family: "Aclonica", sans-serif;
+        }
+      }
+    }
+  }
+}
+.pricing {
+  padding: 140px 0px 0px;
+  .container {
+    .pricing-title {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      h2 {
+        font-size: 45px;
+        color: #fff;
+        line-height: 50px;
+        font-weight: 500;
+        font-family: "Aclonica", sans-serif;
+        margin-bottom: 28px;
+      }
+    }
+    .pricing-cards {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      .pricing-card {
+        background: url(../../images/pricing_bg.png);
+        padding: 35px 35px 60px;
+        background-color: #0b111f;
+        background-position: top;
+        background-size: contain;
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 270px;
+        height: 515px;
+
+        p {
+          color: #fff;
+          font-size: 18px;
+          text-transform: capitalize;
+          margin-bottom: 55px;
+          font-family: "Poppins", sans-serif;
+          font-weight: 700;
+          line-height: 29px;
+        }
+        h3 {
+          font-size: 36px;
+          font-weight: 600;
+          color: #fff;
+          font-family: "Aclonica", sans-serif;
+        }
+        ul {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          margin: 16px 0 22px;
+          padding-top: 37px;
+          font-weight: 400;
+          line-height: 1.5;
+          color: #212529;
+          font-family: "Aclonica", sans-serif;
+          font-size: 14px;
+          li {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            color: #7f7f7f;
+            text-transform: capitalize;
+            padding: 15px 0;
+            border-bottom: 1px dotted;
+            line-height: 1.5;
+            &:last-child {
+              border: 0px solid transparent;
+            }
+          }
+        }
+        .pricing-btn {
+          padding: 18.5px 42px;
+          background-color: transparent;
+          color: #fff;
+          border: 2px solid;
+          border-image: linear-gradient(to left, #ff0000 0%, #c6019a 100%);
+          border-image-slice: 1;
+          font-size: 15px;
+          font-family: "Aclonica", sans-serif;
+          font-weight: 500;
+          transition: all 0.4s ease-in-out;
+          text-transform: capitalize;
+          background-size: 200% auto;
+          cursor: pointer;
+          &:hover {
+            background: linear-gradient(to left, #ff0000 0%, #c6019a 100%);
           }
         }
       }
