--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,5 @@
 @import "./Utils/media";
 @import "./Layout/navbar";
 @import "./Pages/home";
+@import "./Pages/fighter";
 @import "./Layout/footer"
