--- a/scss/Layout/_footer.scss
+++ b/scss/Layout/_footer.scss
@@ -51,7 +51,7 @@
           align-items: center;
           justify-content: flex-start;
           input {
-            padding: 11px;
+            padding: 11px 30px;
             font-size: 13px;
             background-color: #f9f9fe;
             border: 1px solid transparent;
@@ -63,15 +63,58 @@
             font-size: 12px;
             border: 2px solid;
             cursor: pointer;
+            background-size: 100% auto;
+            outline: none;
             background-image: linear-gradient(
               to left,
               #c6019a 0%,
               #ff0000 100%
             );
-            // border-image-slice: 1;
+            transition: all 0.4s ease-in-out;
             i {
               color: #fff;
               font-size: 15;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.copyright {
+  background-color: #0b111f;
+  padding: 30px 0px;
+  .container {
+    .copyright-content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .copyright-subject {
+        p {
+          color: #888;
+          font-family: "Poppins", sans-serif;
+          line-height: 29px;
+          font-size: 15px;
+          margin-bottom: 0px;
+          font-weight: 300;
+          a {
+            color: red;
+            &:hover {
+              color: rgba(255, 0, 0, 0.755);
+            }
+          }
+        }
+      }
+      .copyright-social {
+        ul {
+          display: flex;
+          gap: 28px;
+          i {
+            color: #888;
+            transition: all 0.3s ease-in-out;
+            &:hover {
+              color: red;
             }
           }
         }
