--- a/scss/Pages/_home.scss
+++ b/scss/Pages/_home.scss
@@ -130,7 +130,7 @@ body {
         font-family: "Aclonica", sans-serif;
         font-weight: 500;
         color: #fff;
-  
+
         text-transform: capitalize;
         background-size: 200% auto;
         border: 1px solid transparent;
@@ -150,7 +150,7 @@ body {
           rgba(198, 1, 154, 1) 51%,
           rgba(255, 0, 0, 1) 100%
         );
-cursor: pointer;
+        cursor: pointer;
         font-size: 15px;
         font-family: "Aclonica", sans-serif;
         font-weight: 500;
@@ -728,14 +728,14 @@ cursor: pointer;
         line-height: 50px;
         font-weight: 500;
         font-family: "Aclonica", sans-serif;
-        margin-bottom: 28px;
+        margin-bottom: 60px;
       }
     }
     .pricing-cards {
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 20px;
+      gap: 30px;
       .pricing-card {
         background: url(../../images/pricing_bg.png);
         padding: 35px 35px 60px;
@@ -815,15 +815,21 @@ cursor: pointer;
   }
 }
 
-@include desktops {
-  .home {
-    .container {
-      .home-title {
-        h1 {
-          color: red;
-          font-size: 10px;
-        }
-      }
-    }
+
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 960px;
+   margin: 0px 90px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (max-width: 576px) {
+  .container {
+    max-width: 540px;
   }
 }
