--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -1,21 +1,38 @@
 //Google Fonts Import
-@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Aclonica&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 // Google Default Settings
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
 
-  .container{
-    width: 1200px;
-    margin: 0 auto;
+.container {
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+// MEDIA Container 
+@media (min-width: 1200px) {
+  .container {
+    width: 1024px;
   }
+}
 
-  @media (max-width: 1200px){
-    .container{
-      width: 1140px;
-    }
+@media (max-width: 992px) {
+  .container {
+    max-width: 720px;
   }
+}
+@media (max-width: 766px) {
+  .container {
+    max-width: 576px;
+  }
+}
+@media (max-width: 470px) {
+  .container {
+    max-width: 350px;
+  }
+}
