--- a/scss/Layout/_footer.scss
+++ b/scss/Layout/_footer.scss
@@ -1,19 +1,21 @@
+// Footer Start
 .footer {
   padding: 140px 0px 100px;
   .container {
     .footer-items {
       display: flex;
       flex-direction: row;
+      // flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
       width: 100%;
-      // justify-content: space-between;
+      justify-content: space-between;
       .footer-item {
         display: flex;
         flex-direction: column;
         justify-content: center;
         padding: 0px 15px;
-        width: 30%;
+        width: 35%;
         .logo {
           width: 158px;
           height: 38px;
@@ -89,6 +91,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      flex-wrap: wrap;
 
       .copyright-subject {
         p {
@@ -122,3 +125,4 @@
     }
   }
 }
+// Footer END 
