--- a/scss/Layout/_navbar.scss
+++ b/scss/Layout/_navbar.scss
@@ -1,27 +1,30 @@
-
+// Nanbar Start 
 .header {
   width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  position: absolute;
 
-    // background: url(../../images/banner_bg.png);
-    // background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    z-index: 99999;
-    top: 0;
-    left: 0;
-    position: absolute;
-  
-  transition: all .5s ease-in;
+  transition: all 0.5s ease-in;
   .container {
-    
     .navBar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 0 15px;
-      transition: all .5s ease-in;
-     
+      transition: all 0.5s ease-in;
+      width: 100%;
+      .fa-bars {
+        color: #ffffff;
+        z-index: 999999;
+        font-size: 20px;
+        font-weight: 900;
+        display: none;
+      }
       .logo {
         display: flex;
         align-items: center;
@@ -38,14 +41,14 @@
           text-transform: capitalize;
           line-height: 12px;
           font-weight: 400;
-           
-            position: relative;
-            // display: block;
-            cursor: pointer;
-          
-          
-          &:before, &:after {
-            content: '';
+
+          position: relative;
+          // display: block;
+          cursor: pointer;
+
+          &:before,
+          &:after {
+            content: "";
             position: absolute;
             width: 0%;
             height: 3px;
@@ -53,7 +56,7 @@
             margin-top: -0.5px;
             background: #000;
           }
-          
+
           &:before {
             left: -2.5px;
           }
@@ -62,25 +65,31 @@
             background: #000;
             transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
           }
-          
+
           &:hover:before {
             background: #000;
             width: 100%;
             transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
           }
-          
-         &:hover:after {
+
+          &:hover:after {
             background: transparent;
             width: 100%;
             transition: 0s;
           }
         }
       }
+
       .nav-btn {
         width: 15%;
         height: 61px;
-        background: rgb(255,0,0);
-        background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(198,1,154,1) 51%, rgba(255,0,0,1) 100%);
+        background: rgb(255, 0, 0);
+        background: linear-gradient(
+          90deg,
+          rgba(255, 0, 0, 1) 0%,
+          rgba(198, 1, 154, 1) 51%,
+          rgba(255, 0, 0, 1) 100%
+        );
         padding: 10px;
         font-size: 15px;
         font-family: "Aclonica", sans-serif;
@@ -90,9 +99,47 @@
         text-transform: capitalize;
         background-size: 200% auto;
         border: 1px solid transparent;
-        transition: all .5s ease-in-out;
-        &:hover{
-            background-position: right center;
+        transition: all 0.5s ease-in-out;
+        &:hover {
+          background-position: right center;
+        }
+      }
+    }
+    .mobile-menu {
+      display: none;
+      position: relative;
+
+      width: 100%;
+      height: 0;
+      opacity: 0;
+      visibility: 0;
+      transition: all 0.3s ease;
+
+      .menuList {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        background-color: #ffffff;
+        width: 100%;
+        .menuItem {
+          padding: 10px 15px;
+          font-weight: 400;
+          line-height: 1.5;
+          color: #212529;
+          width: 100%;
+          a {
+            padding: 5px 15px;
+            color: #000;
+            font-family: "Poppins", sans-serif;
+            text-transform: capitalize;
+            line-height: 12px;
+            font-weight: 400;
+          }
         }
       }
     }
@@ -100,7 +147,6 @@
 }
 .sticky-first {
   top: -100px;
- 
 }
 .sticky-second {
   background: none;
@@ -108,3 +154,4 @@
   position: fixed;
   top: 0;
 }
+// Navbar END 
