--- a/scss/Pages/_fighter.scss
+++ b/scss/Pages/_fighter.scss
@@ -1,25 +1,27 @@
-.header{
+// Fighter Start 
+.fighter {
+  background: url(../../images/fighter_bg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
   
-    
-}
-.sticky-first {
-    top: -100px;
-   
+.fighter-title{
+display: flex;
+align-items: center;
+justify-content: center;
+  h2{
+    color: #fff;
+    font-size: 90px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    line-height: 1.2em;
+    font-family: "Aclonica", sans-serif;
+    text-transform: capitalize;
   }
-  .sticky-second {
-    background: none;
-    background-color: #ff0000;
-    position: fixed;
-    top: 0;
-  }
-.fighter{
-
-
-    background: url(../../images/fighter_bg.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 500px;
 }
-
-
+}
+// Fighter END 
