css final project

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,10 @@
-@import "./Base/reset";
-@import "./Layout/navbar";
-@import "./Pages/home";
-@import "./Pages/fighter";
-@import "./Pages/.team";
-@import "./Layout/footer";
-@import "./Utils/media";
-@import "./Pages/single-blog";
-@import "./Pages/blog";
-@import "./Pages/contact";
+@import "./base/reset";
+@import "./layout/navbar";
+@import "./pages/home";
+@import "./pages/fighter";
+@import "./pages/.team";
+@import "./layout/footer";
+@import "./utils/media";
+@import "./pages/single-blog";
+@import "./pages/blog";
+@import "./pages/contact";
